--- a/kevin/summaries/180907.md
+++ b/kevin/summaries/180907.md
@@ -66,5 +66,5 @@ so I wrote them down
 It's not quite done,
 but I think it provides
 a good starting point
-and clarifys some definitions
+and clarifies some definitions
 and common misunderstandings.
