--- a/kevin/summaries/180914.md
+++ b/kevin/summaries/180914.md
@@ -24,8 +24,8 @@ I have a bunch of design notes
 that I need to write up
 in some coherent way.
 
-## Assessment Network
+## Unicorn
 
 JP and I had an interesting design dicussion
 related to feature flags/toggles
-and updates within a15k in general.
+and updates within Unicorn in general.
