--- a/kevin/summaries/180928.md
+++ b/kevin/summaries/180928.md
@@ -25,8 +25,18 @@ which is still in progress
 but was essentially reviewed (at least at a high-level)
 in a meeting with me, JP, PhilS, Ross, Helene, and Ed.
 
+As an aside,
+it was decided
+during Q4 planning
+that what I am writing
+is effectively a "technical pre-brief"
+since it doesn't actually define an architecture per-se.
+But once everyone on CNX can agree on its contents,
+we can derive a more formal technical brief
+and architecture from it.
+
 My next steps are:
-* to show how the many logical pipelines can be mapped to relatively few physical pipelines
+* to update my Round 3 writeup to show how the many logical pipelines can be mapped to relatively few physical pipelines
   consisting of shared widgets (libraries, services, etc.) that
   (a) help devs maintain the system and 
   (b) allow Content to manage styling
@@ -34,4 +44,9 @@ My next steps are:
   including how content is developed by our partners,
   reviewed by OpenStax, and eventually released
   to the outside world
+
+Helene and I
+will be meeting on Wed so that: 
+* she can bounce some more of her designs/visions off me and
+* she can detail the interactions I need to understand for my higher-level CNX writeup
 
