--- a/kevin/summaries/181121.md
+++ b/kevin/summaries/181121.md
@@ -30,7 +30,7 @@ to split them into three separate chunks,
 each targeting specific use cases.
 
 I cannot help but think
-that we are recreated GitHub,
+that we are recreating GitHub,
 but for content development.
 
 Dennis fixed my account on `devb`,
