--- a/kevin/summaries/181121.md
+++ b/kevin/summaries/181121.md
@@ -46,4 +46,10 @@ neb/press/batch writeups
 and
 [here](https://docs.google.com/document/d/1RPGgDSOxel7ZH76glbTgbU6PqSpcUgyUPzbDfS1vZi4/edit#heading=h.hek2h91h63l).
 
-
+I taked with Michael
+about his vision of how
+all these things should work.
+It was very useful,
+and I'll be folding his inputs
+into my writeups
+as soon as possible.
