--- a/kevin/summaries/181207.md
+++ b/kevin/summaries/181207.md
@@ -11,6 +11,19 @@
 
 So that happened.
 
+## Problem with Biglearn Deployment
+
+Thu night / Fri morning
+I helped Carly and Nathan
+try to figure out what happened
+during the deployment.
+It turned out that
+there were some issues
+with a slow migration.
+The big questions on my mind
+is why this was not caught
+at QA/staging.
+
 ## Recipe-Based Pipelines
 
 Karen seem pretty close
