--- a/kevin/summaries/181207.md
+++ b/kevin/summaries/181207.md
@@ -26,7 +26,7 @@ at QA/staging.
 
 ## Recipe-Based Pipelines
 
-Karen seem pretty close
+Karen seems pretty close
 to having the pieces
 of the PDF pipeline running.
 
