--- a/kevin/summaries/181214.md
+++ b/kevin/summaries/181214.md
@@ -36,3 +36,8 @@ the betting I can tailor them
 to that audience,
 so if you know of any other consumers
 let me know.
+
+## Access Control Requirements for Book Production
+
+I sent a message to Dave and Anthony
+to get the ball rolling on this.
