--- a/kevin/summaries/190308.md
+++ b/kevin/summaries/190308.md
@@ -20,6 +20,24 @@ which is really promising.
 I'll be sending out offers
 over the weekend (probably).
 
+## 1-on-1 with Alana
+
+I have a very interesting chat with Alana
+as part of her engineering 1-on-1s.
+It seems like there is some momentum
+outside of Tutor/Biglearn/Devops
+to try to get ZDT deployments working.
+I think it'd be A Good Things
+for me to discuss the work I've been doing
+with them to make sure everyone is on the same page
+in terms of potential approaches, drawbacks, etc.
+
+I also plan to fold the improvements
+that JP and Scotts have recently made
+into my plans for Biglearn.
+This should probably happen
+before I talk to Alana's crowd.
+
 ## CNX CLI Pipeline
 
 Apparently Karen and Helene 
