--- a/kevin/summaries/190329.md
+++ b/kevin/summaries/190329.md
@@ -19,6 +19,22 @@ and the remainder of the BL applicants
 have become fodder for some other positions
 that didn't have as many applicants.
 
+## AWS Organization/Account Setup
+
+I was able to create a CloudFormation template
+to setup an empty AWS account with:
+* `admin` and `dev` groups
+* `admin` and `dev` roles (with an initial set of associated policies)
+* an initial S3 bucket for templates needed by deploy scripts
+
+This is useful because:
+* the setup can be under version control, which makes it reviewable
+* DevOps won't need to setup groups/roles/policies by hand
+* DevOps can copy the setup across accounts
+* folks with admin abilities can still act as though they were normal devs,
+  making it possible to repeat dev-specific issues
+* adding/removing folks from a project, or adjusting their roles, is super easy
+
 ## CNX CLI Pipeline
 
 It seems like this has been moving along nicely,
