--- a/kevin/summaries/190503.md
+++ b/kevin/summaries/190503.md
@@ -6,3 +6,33 @@
 - [Kevin's Autoscaling Notes](https://docs.google.com/document/d/1bmn2xYBURE90fiZrdNG5CN28vEBCPJbKukDTbUqntZ4/edit)
 - [Kevin's Biglearn Autoscaling Big Picure](https://docs.google.com/document/d/1JGcHIzmHDaDFlQvznzYgsWHuXBRis9qvtwF6pwaYVfQ/edit)
 - [Kevin's Reading List](https://github.com/openstax/napkin-notes/blob/master/kevin/summaries/reading_list.md)
+
+## Intern Planning
+
+I've been ramping up
+my planning for this summer.
+
+I've pretty much laid out
+how to get my interns up to speed
+on Rails-related topics.
+
+Next, I turn my attention
+to AWS services, etc.,
+and deployments.
+
+This is going to be my focus
+during dig-out week.
+
+## CNX
+
+CNX took up a LOT more time this week
+than I would've hoped.
+
+I don't think it's doing anything for anyone
+by having me half-involved
+(e.g., not being at seemingly important meetings,
+but still reviewing stuff and offering inputs).
+Either I should be involved in the process, or not.
+And I'll have plenty of other stuff
+to keep me busy this summer...
+
